@@ -40,6 +40,8 @@ import org.slf4j.LoggerFactory;
 import java.io.StringReader;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.stream.Collectors;
@@ -125,9 +127,9 @@ abstract class AbstractConfigPropertyResource extends AbstractApiResource {
                 property.setPropertyValue(null);
             } else {
                 try {
-                    final URL url = new URL(json.getPropertyValue());
+                    final URL url = new URI(json.getPropertyValue()).toURL();
                     property.setPropertyValue(url.toExternalForm());
-                } catch (MalformedURLException e) {
+                } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
                     return Response.status(Response.Status.BAD_REQUEST).entity("The property expected a URL but the URL was malformed.").build();
                 }
             }
